--- a/resources/messages.ini
+++ b/resources/messages.ini
@@ -1,6 +1,6 @@
 # {%prefix} - префикс
 # {%other} - всё остальное у игрока (ник, привилегия если есть плагин на форматирования, и.т.д)
-# Если и игрока отсутсвует префикс, то его nametag, displayname, chatformat не будут тронуты.
+# Если у игрока отсутсвует префикс, то его nametag, displayname, chatformat не будут тронуты.
 nametag = [{%prefix}] {%other}
 displayname = [{%prefix}] {%other}
 chatformat = [{%prefix}] {%other}
