--- a/resources/config.yml
+++ b/resources/config.yml
@@ -3,3 +3,6 @@ update: 0
 
 # Лимит на длину префикса (считая цвета тоже, не действует на админов)
 limit: 20
+
+# Частота сохранения данных в БД (в минутах)
+save: 1
