--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,7 +1,7 @@
-# Регулярное обновление префикса в тиках (0 для выключения)
+# Частота обновления префикса в тиках (0 — для выключения)
 update: 0
 
-# Лимит на длину префикса (считая цвета тоже, не действует на админов)
+# Лимит длины префикса (включая символы цветов, не действует для администраторов)
 limit: 20
 
 # Частота сохранения данных в БД (в минутах)
