--- a/resources/messages.ini
+++ b/resources/messages.ini
@@ -1,23 +1,23 @@
 # {%prefix} - префикс
-# {%other} - всё остальное у игрока (ник, привилегия если есть плагин на форматирования, и.т.д)
-# Если у игрока отсутсвует префикс, то его nametag, displayname, chatformat не будут тронуты.
+# {%other} - всё остальное у игрока (ник, привилегия, если установлен плагин на форматирование и т.д.)
+# Если у игрока отсутствует префикс, то его nametag, displayname и chatformat останутся без изменений.
 nametag = [{%prefix}] {%other}
 displayname = [{%prefix}] {%other}
 chatformat = [{%prefix}] {%other}
 
 setprefix.usage = Использование: /setprefix <префикс>
-setprefix.not_found = Упс... Не получилось... Убедитесь что заготовка префикса "{%0}" существует.
-setprefix.limit = Префикс не должен быть больше 20 символов (считая цвета тоже)
-setprefix.ready_prefix_not_permission = У вас не получится поставить такой префикс... (
-setprefix.success = Успешно! Поздравляем с новым префиксом )
-delprefix.without_prefix = А у вас точно есть префикс?
-delprefix.success = Вы успешно удалили свой префикс.
+setprefix.not_found = Упс... Не получилось. Убедитесь, что заготовка префикса "{%0}" существует.
+setprefix.limit = Префикс не должен быть длиннее 20 символов (включая символы цвета).
+setprefix.ready_prefix_not_permission = У вас нет разрешения на использование данного префикса.
+setprefix.success = Успешно! Поздравляем с новым префиксом!
+delprefix.without_prefix = У вас нет установленного префикса.
+delprefix.success = Префикс успешно удалён.
 setprefixto.usage = Использование: /setprefixto <игрок> <префикс или заготовка префикса>
-setprefixto.success = Вы успешно установили префикс данному игроку!
+setprefixto.success = Префикс успешно установлен игроку!
 delprefixfrom.usage = Использование: /delprefixfrom <игрок>
-delprefixfrom.without_prefix = Данный игрок без префикса.
-delprefixfrom.success = Вы успешно удалили префикс у игрока!
+delprefixfrom.without_prefix = У данного игрока нет префикса.
+delprefixfrom.success = Префикс успешно удалён у игрока!
 addreadyprefix.usage = Использование: /addreadyprefix <название заготовки> <префикс>
-addreadyprefix.success = Вы успешно создали заготовку {&name} обозначающий префикс {%prefix}!
+addreadyprefix.success = Заготовка "{%name}" успешно создана с префиксом "{%prefix}"!
 delreadyprefix.usage = Использование: /delreadyprefix <название заготовки>
-delreadyprefix.success = Вы успешно удалили заготовку {&name}!
+delreadyprefix.success = Заготовка "{%name}" успешно удалена!
