--- a/resources/config.ini
+++ b/resources/config.ini
@@ -5,6 +5,7 @@ nametag = [{%prefix}] {%other}
 displayname = [{%prefix}] {%other}
 chatformat = [{%prefix}] {%other}
 
+# Сообщения
 setprefix.usage = Использование: /setprefix <префикс>
 setprefix.not_found = Упс... Не получилось. Убедитесь, что заготовка префикса "{%0}" существует.
 setprefix.limit = Префикс не должен быть длиннее 20 символов (включая символы цвета).
