--- a/resources/config.ini
+++ b/resources/config.ini
@@ -10,9 +10,12 @@ setprefix.usage = Использование: /setprefix <префикс>
 setprefix.not_found = Упс... Не получилось. Убедитесь, что заготовка префикса "{%0}" существует.
 setprefix.limit = Префикс не должен быть длиннее 20 символов (включая символы цвета).
 setprefix.ready_prefix_not_permission = У вас нет разрешения на использование данного префикса.
+setprefix.ready_prefix_null = Такой заготовки префикса не существует.
 setprefix.success = Успешно! Поздравляем с новым префиксом!
+setprefix.event_cancel = Что-то помешало вам принять префикс...
 delprefix.without_prefix = У вас нет установленного префикса.
 delprefix.success = Префикс успешно удалён.
+delprefix.event_cancel = Что-то помешало вам удалить префикс...
 setprefixto.usage = Использование: /setprefixto <игрок> <префикс или заготовка префикса>
 setprefixto.success = Префикс успешно установлен игроку!
 delprefixfrom.usage = Использование: /delprefixfrom <игрок>
