--- a/resources/config.yml
+++ b/resources/config.yml
@@ -4,12 +4,13 @@ limit: 20
 # Частота сохранения данных в БД (в минутах)
 save: 1
 
+# Настройки базы данный (если не шарите, то лучше не трогайте)
 database:
-  provider: mysql
+  provider: sqlite
   sqlite:
     path: database.db
   mysql:
-    host: localhost:8008
+    host: localhost:3306
     username: root
-    password: qwerty123
+    password: qwerty
     scheme: prefixes
