--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,3 +1,6 @@
+# Частота обновления префикса (в тиках, 0 для отключения)
+update: 20
+
 # Лимит длины префикса (включая символы цветов, не действует для администраторов)
 limit: 20
 
